# Miezi

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.bash  build.bat  build.sh
assets/shaders/: Line.frag  Line.vert  Point.frag  Point.vert  Primitive2D.frag  Primitive2D.vert  Primitive3D.frag  Primitive3D.vert
scripts/: build.bash  setup.bash
src/: main.cpp  pch.h
src/Window/: IWindow.h  WindowBase.h
src/mz/core/: core.behaviours.cppm  core.h  core.logging.cppm  core_behaviours.cppm  core_defines.h  core_interface.cppm  core_logging.cppm  core_types.cppm
src/mz/events/: event_macros.h  events.cppm  events.key.cppm  events.mouse.cppm  events.window.cppm  events_key.cppm  events_mouse.cppm  events_window.cppm
src/mz/graphics/: graphics.buffer.cppm  graphics.buffers.cppm  graphics.cpp  graphics.cppm  graphics.data.cppm  graphics.render.cppm  graphics.resources.cppm  graphics.shader.cppm
src/mz/graphics/opengl/: graphics.opengl.buffer.cppm  graphics.opengl.buffers.cppm  graphics.opengl.cppm  graphics.opengl.render.cppm  graphics.opengl.resources.cppm  graphics.opengl.shader.cppm
src/mz/graphics/renderer/: buffers.cppm  camera.cppm  data.cppm  renderer.cpp  renderer.cppm  renderer_buffers.cppm  renderer_camera.cppm  renderer_data.cppm  renderer_resources.cppm  resources.cppm
src/mz/graphics/renderer/opengl/: opengl.cppm  renderer_opengl.cppm  renderer_opengl_buffers.cppm  renderer_opengl_debug.cppm  renderer_opengl_resources.cppm  resources.cppm
src/mz/graphics/scene/: Entity.h  Scene.cpp  Scene.h  camera.cppm  scene.cppm  scene_camera.cppm  scene_component_utils.cppm  scene_components.cppm  scene_components_utils.cppm  scene_entity.cpp  scene_entity.cppm
src/mz/graphics/window/: window.cpp  window.cppm  window_glfw.cppm
src/mz/graphics/window/glfw/: glfw.cppm  window_glfw.cppm
src/mz/math/: math_constants.cppm  math_geometry.cpp  math_geometry.cppm
src/mz/renderer/: renderer_gl.cppm
src/mz/util/: geometry.cpp  geometry.cppm  math.cppm  util.cppm  util_thread.cppm  util_time.cppm
src/mz/window/: window.cpp  window.cppm  window.glfw.cppm  window_glfw.cppm
